# C4cpp

./: .gitattributes  CMakeLists.txt  README.md  c4.cpp  winTester.cpp
include/: board.hpp  color.hpp  mcts.hpp  sigmazero.hpp
libtorch/lib/: .gitattributes  libbackend_with_compiler.dylib  libc10.dylib  libfbjni.dylib  libjitbackend_test.dylib  libpytorch_jni.dylib  libshm.dylib  libtorch.dylib  libtorch_cpu.dylib  libtorch_global_deps.dylib  libtorch_python.dylib  libtorchbind_test.dylib
src/: board.cpp  c4.cpp  color.cpp  mcts.cpp  sigmazeero.cpp
test/: CMakeLists.txt  test.cpp
